# LOL-Win-Prediction

./: .gitattributes  .gitignore  README.md  best_model.pth  filtered_rows.csv  head_and_tail.csv  lolnet.py  prediction.ipynb  pyproject.toml  requirements.txt  rows_with_nulls.csv  trades.py
data/: 2017_LoL_esports_match_data_from_OraclesElixir.csv  2019_LoL_esports_match_data_from_OraclesElixir.csv  2020_LoL_esports_match_data_from_OraclesElixir.csv  2021_LoL_esports_match_data_from_OraclesElixir.csv  2022_LoL_esports_match_data_from_OraclesElixir.csv  2023_LoL_esports_match_data_from_OraclesElixir.csv  2024_LoL_esports_match_data_from_OraclesElixir.csv  champion_label_mapping.csv  minmax_scaler.pkl  normalize_cols.json  skewed_features.json
data/OraclesElixir/: .gitattributes  2014_LoL_esports_match_data_from_OraclesElixir.csv  2015_LoL_esports_match_data_from_OraclesElixir.csv  2016_LoL_esports_match_data_from_OraclesElixir.csv  2017_LoL_esports_match_data_from_OraclesElixir.csv  2018_LoL_esports_match_data_from_OraclesElixir.csv  2019_LoL_esports_match_data_from_OraclesElixir.csv  2020_LoL_esports_match_data_from_OraclesElixir.csv  2021_LoL_esports_match_data_from_OraclesElixir.csv  2022_LoL_esports_match_data_from_OraclesElixir.csv  2023_LoL_esports_match_data_from_OraclesElixir.csv  2024_LoL_esports_match_data_from_OraclesElixir.csv  2025_LoL_esports_match_data_from_OraclesElixir.csv
eda_data/: head_and_tail.csv  rows_with_nulls.csv
models/: lolnet.onnx  lolnet.pth  lolnet_jacobian.onnx  lolnet_jacobian.pth  lolnet_noise.onnx  lolnet_noise.pth  lolnet_pgd.onnx  lolnet_pgd.pth  lolnet_trades.onnx  lolnet_trades.pth
training_log/: epoch_logs.csv  trial_results.csv
