[project]
name = "lol-win-prediction"
version = "0.1.0"
description = "predics the win probability in League of Legends matches using a deep neural network trained on in-game data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens==3.0.0",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.58.1",
    "fsspec==2025.5.1",
    "humanfriendly==10.0",
    "ipykernel==6.29.5",
    "ipython==8.37.0",
    "jacobian",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "maraboupy==2.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "onnx==1.18.0",
    "onnxruntime==1.22.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.7.1",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.3.1",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
]

[tool.uv.sources]
jacobian = { git = "https://github.com/facebookresearch/jacobian_regularizer", rev = "32bb044c4c0163c908ef3c166d07d4ab2a248e07" }
